{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 13,
  "lineage": "5461666c-c3b2-7de6-b782-e053cc1092bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prime-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505518997326:internet-gateway/igw-0f52844766b5e0798",
            "id": "igw-0f52844766b5e0798",
            "owner_id": "505518997326",
            "tags": {
              "Name": "prime-igw"
            },
            "tags_all": {
              "Name": "prime-igw"
            },
            "vpc_id": "vpc-041117937ca0ad127"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505518997326:route-table/rtb-066b34face5769d3e",
            "id": "rtb-066b34face5769d3e",
            "owner_id": "505518997326",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f52844766b5e0798",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prime-pub-route-table"
            },
            "tags_all": {
              "Name": "prime-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-041117937ca0ad127"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505518997326:route-table/rtb-0398c466b22624a27",
            "id": "rtb-0398c466b22624a27",
            "owner_id": "505518997326",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prime-private-route-table"
            },
            "tags_all": {
              "Name": "prime-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-041117937ca0ad127"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061aed1f93e771563",
            "route_table_id": "rtb-0398c466b22624a27",
            "subnet_id": "subnet-00a50511c7ca1f9fd"
          },
          "dependencies": [
            "aws_route_table.private-route_table",
            "aws_subnet.prime-private1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db8a9c5e62df7965",
            "route_table_id": "rtb-0398c466b22624a27",
            "subnet_id": "subnet-0d9b5389b5fc21357"
          },
          "dependencies": [
            "aws_route_table.private-route_table",
            "aws_subnet.prime-private2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0733ef5dee0bd4161",
            "route_table_id": "rtb-066b34face5769d3e",
            "subnet_id": "subnet-023417eea2b10afc6"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route-table",
            "aws_subnet.prime-pub1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ed055c3674960ce",
            "route_table_id": "rtb-066b34face5769d3e",
            "subnet_id": "subnet-09c49fb53262f170c"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route-table",
            "aws_subnet.prime-pub2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505518997326:subnet/subnet-00a50511c7ca1f9fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a50511c7ca1f9fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505518997326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-private1"
            },
            "tags_all": {
              "Name": "prime-private1"
            },
            "vpc_id": "vpc-041117937ca0ad127"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505518997326:subnet/subnet-0d9b5389b5fc21357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9b5389b5fc21357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505518997326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-private2"
            },
            "tags_all": {
              "Name": "prime-private2"
            },
            "vpc_id": "vpc-041117937ca0ad127"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505518997326:subnet/subnet-023417eea2b10afc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023417eea2b10afc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505518997326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub1"
            },
            "tags_all": {
              "Name": "prime-pub1"
            },
            "vpc_id": "vpc-041117937ca0ad127"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505518997326:subnet/subnet-09c49fb53262f170c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c49fb53262f170c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505518997326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub2"
            },
            "tags_all": {
              "Name": "prime-pub2"
            },
            "vpc_id": "vpc-041117937ca0ad127"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505518997326:vpc/vpc-041117937ca0ad127",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e07212bdf752651e",
            "default_route_table_id": "rtb-0166071482fe06e6c",
            "default_security_group_id": "sg-000333b099675b5b9",
            "dhcp_options_id": "dopt-00e8444ef257d86c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041117937ca0ad127",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0166071482fe06e6c",
            "owner_id": "505518997326",
            "tags": {
              "Name": "prime"
            },
            "tags_all": {
              "Name": "prime"
            }
          }
        }
      ]
    }
  ]
}